# cookiecutters

./: README.md  cookiecutter.json
clojure-reloaded/: cookiecutter.json
clojure-reloaded/{{cookiecutter.project_name}}/: Makefile  README.md  project.clj
clojure-reloaded/{{cookiecutter.project_name}}/dev/: user.clj
clojure-reloaded/{{cookiecutter.project_name}}/src/{{cookiecutter.main_ns}}/: system.clj  utils.clj
clojure-reloaded/{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: core.clj
clojure-reloaded/{{cookiecutter.project_name}}/test/{{cookiecutter.main_ns}}/: core_test.clj
clojure-reloaded/{{cookiecutter.project_name}}/test/{{cookiecutter.project_name}}/: core_test.clj
cpp/: .gitignore  README.md  cookiecutter.json
cpp/{{cookiecutter.project_name}}/: .gitignore  CMakeLists.txt  Makefile  conandata.yml
cpp/{{cookiecutter.project_name}}/apps/: CMakeLists.txt
cpp/{{cookiecutter.project_name}}/apps/my-app/: EntryPoint.cpp
cpp/{{cookiecutter.project_name}}/docs/: Doxyfile
cpp/{{cookiecutter.project_name}}/libs/: CMakeLists.txt
cpp/{{cookiecutter.project_name}}/libs/greeting/: CMakeLists.txt  Greeting.cpp  Greeting.h
cpp/{{cookiecutter.project_name}}/libs/greeting/tests/: CMakeLists.txt  GreetingTest.cpp
cpp/{{cookiecutter.project_name}}/libs/logging/: CMakeLists.txt  Log.cpp  Log.h
cpp/{{cookiecutter.project_name}}/logging/: CMakeLists.txt  Log.cpp  Log.h
cpp/{{cookiecutter.project_name}}/tests/: CMakeLists.txt
cpp/{{cookiecutter.project_name}}/{{cookiecutter.main_module_name}}/: CMakeLists.txt
cpp/{{cookiecutter.project_name}}/{{cookiecutter.main_module_name}}/src/: EntryPoint.cpp  Sandbox.cpp  Sandbox.h
cpp/{{cookiecutter.project_name}}/{{cookiecutter.main_module_name}}/tests/: test1.cpp
python/: .gitignore  cookiecutter.json
python-poetry/{{cookiecutter.project_name}}/: Makefile  makefile  pyproject.toml
python-poetry/{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __main__.py
python-uv/: cookiecutter.json
python-uv/{{cookiecutter.project_name}}/: makefile  pyproject.toml
python-uv/{{cookiecutter.project_name}}/.github/workflows/: python.yml
python/{{cookiecutter.project_name}}/: makefile  pyproject.toml
rust/: cookiecutter.json
rust/{{cookiecutter.project_name}}/: Cargo.toml  Makefile
rust/{{cookiecutter.project_name}}/src/: lib.rs  main.rs  {{cookiecutter.package_name}}.rs
rust/{{cookiecutter.project_name}}/tests/: main-test.rs
{{cookiecutter.project_name}}/: pyproject.toml
{{cookiecutter.project_name}}/tests/{{cookiecutter.package_name}}/: test_app.py
